<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>perception_node</name>
  <version>0.0.0</version>

  <description>
    Counter-UAS Perception Layer
  </description>

  <maintainer email="himanshuraj.hr9934@gmail.com">
    himanshu-raj
  </maintainer>

  <license>Apache-2.0</license>

  <!-- Build Type -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime Dependencies -->
  <depend>rclpy</depend>

  <depend>std_msgs</depend>

  <depend>sensor_msgs</depend>

  <depend>interfaces</depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>

  <test_depend>ament_flake8</test_depend>

  <test_depend>ament_pep257</test_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>